force-app/main/default/objects/Account/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Bairro - Endereço</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>