force-app/main/default/objects/Account/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Cidade - Endereço</description>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>