force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado - Endereço</description>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>