force-app/main/default/objects/Account/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>Idade__c</fullName>
    <formula>FLOOR( ( TODAY() - Data_de_Nascimento__c ) / 365.25 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>