force-app/main/default/objects/Account/fields/NumeroDependentes__c.field-meta.xml
<CustomField>
    <fullName>NumeroDependentes__c</fullName>
    <description>Número de Dependentes</description>
    <label>Número de Dependentes</label>
    <summaryFilterItems>
        <field>Dependente__c.Ativo__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Dependente__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>