force-app/main/default/objects/Account/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <description>Nome do Plano</description>
    <label>Plano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>