force-app/main/default/objects/Account/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <description>Rua - Endereço</description>
    <label>Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>