force-app/main/default/objects/Account/fields/StatusPlano__c.field-meta.xml
<CustomField>
    <fullName>StatusPlano__c</fullName>
    <description>Status do plano</description>
    <label>Status do Plano</label>
    <length>255</length>
    <type>Text</type>
</CustomField>