force-app/main/default/objects/Account/fields/VencimentoPlano__c.field-meta.xml
<CustomField>
    <fullName>VencimentoPlano__c</fullName>
    <description>Vencimento do Plano</description>
    <label>Vencimento do Plano</label>
    <type>Date</type>
</CustomField>